SONAR-22727 Add new software qualities rating measures